syntax = "proto3";
message User {
    string name = 1;
}

message Empty {}

message UserList {
    repeated User users = 1;
}

message JoinResponse {
    int32 error = 1;
    string msg = 2;
}

message ReceiveMsgRequest {
    string user = 1;
}

message ChatMessage {
    string from = 1;
    string msg = 2;
    string time = 3;
    string uuid = 4;
    repeated User likeList = 5;
}

message ChatMessageList {
    repeated ChatMessage messages = 1;
}

message LikeMessageRequest {
    string uuid = 1;
    User user = 2;
}

message LikeMessageResponse {
    int32 error = 1;
    string msg = 2;
}

service ChatService {
    rpc join(User) returns (JoinResponse) {}
    rpc sendMsg(ChatMessage) returns (Empty) {}
    rpc receiveMsg(ReceiveMsgRequest) returns (stream ChatMessage) {}
    rpc getAllUsers(Empty) returns (stream UserList) {}
    rpc getAllMessages(Empty) returns (ChatMessageList) {}
    rpc likeToMessage(LikeMessageRequest) returns (LikeMessageResponse) {}
    rpc outRoom(User) returns (Empty) {}
}

